# ros-virtual-laser-scan

./: CMakeLists.txt  package.xml
launch/: virtual_laser_scan.launch.py
src/: virtual_laser_cloud.cpp  virtual_laser_scan.cpp  virtual_point_cloud.cpp
